package com.rosalesdentalcare.dental_platform.repository;

import org.springframework.data.jpa.repository.JpaRepository;

import com.rosalesdentalcare.dental_platform.entity.VitalSigns;

public interface VitalSignsRepository extends JpaRepository<VitalSigns, Long> {}
